Fixed overflow on mobile

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
   padding: 0;
   box-sizing: border-box;
   font-family: myFont;
+  
+  overflow-x: hidden;
 }
 
 @font-face {
@@ -233,34 +235,169 @@ button{
 }
 
 @media(min-width: 990px) and (max-width: 1199px){
+  body{
+    padding: 5vmax 8vmax 0 8vmax;
+  }
   header{
     height: 10vmin;
   }
   #logo{
-    height: 50px;
-    width: 50px;
+    display: block;
+    height: 40px;
+    width: 60px;
   }
   .hidden-lg,#hamburger-menu{
     display: none;
+  }
+  main{
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 250px;
+    grid-column-gap: 1.2rem;
+    grid-row-gap: 3rem;
+  }
+  #headline{
+    grid-column: 1/3;
+    grid-row: 1/3;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 300px;
+    grid-row-gap: 1rem;
+  }
+  #headline img{
+    grid-column: 1/3;
+    width: 100%;
+    height: 100%;
+  }
+
+  #headline h1{
+    font-size: 3.8rem;
+  }
+
+  #text{
+    margin: 1rem 1rem 0 0;
+    font-size: 1.1rem;
+  }
+ 
+  button{
+    margin-top: 2rem;
+    width: 50%;
+    padding: 0.5rem;
+    text-transform: uppercase;
+    background-color: brown;
+    color: #fff;
+    text-align: center;
+  }
+
+  button:hover{
+    cursor: pointer;
+    background-color: #000043;
+  }
+ 
+  #sidebar{
+    grid-row: 1/3;
+  }
+  #articles{
+    display: flex;
+    grid-column: 1/4;
+    justify-content: space-between;
+  }
+  .article{
+    width: 31%;
+  }
+  .article img{
+    height: 50%;
+    width: 32%;
   }
   
 }
 
 @media(min-width: 501px) and (max-width: 989px){
   header{
-    height: 6vmin;
+    height: 8vh;
+    position: fixed;
+    opacity: 1;
+    background-color: #fff;
+    width: 100%;
+    padding: 2.5vh 8vmin 0 0;
   }
   body{
-    margin: 4vmin;
+    margin: 0 4vmin 0 4vmin;
   }
   #logo{
-    height: 35px;
-    width: 45px;
+    height: 25px;
+    width: 35px;
   }
- 
+  #hamburger-icon{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 25px;
+    width: 30px;
+    margin-left: auto;
+    margin-top: 0;
+  }
   .hidden-sm{
     display: none;
   }
+  nav #menu{
+    display: none;
+  }
+  
+  main{
+    grid-template-columns: 100%;
+    grid-auto-rows: 120vh;
+  }
+  #headline{
+    display: grid;
+    grid-template-columns: 100%;
+    grid-auto-rows: 40vh;
+    grid-row-gap: 0.5rem;
+  }
+  #headline img{
+    width: 100%;
+    height: 100%;
+  }
+
+  #headline h1{
+    font-size: 3.8rem;
+  }
+
+  #text{
+    margin: 0 1rem 0 0;
+    font-size: 1.1rem;
+  }
+ 
+  button{
+    margin-top: 2rem;
+    width: 50%;
+    padding: 0.5rem;
+    text-transform: uppercase;
+    background-color: brown;
+    color: #fff;
+    text-align: center;
+  }
+
+  button:hover{
+    cursor: pointer;
+    background-color: #000043;
+  }
+ 
+  #sidebar{
+    grid-column: 1/4;
+    margin: 5vh 0 5vh 0;
+  }
+  #articles{
+    flex-direction: column;
+    grid-column: 1/4;
+    justify-content: space-between;
+  }
+  .article{
+    height: 30%;
+  }
+  .content h2,h3, p{
+    margin: 0.5rem;
+  }
+  
 }
 
 @media(max-width: 500px){
